--- a/Светильники/led-svytylnyk.html
+++ b/Светильники/led-svytylnyk.html
@@ -10,8 +10,9 @@
 
       <link rel="shortcut icon" href="./images/svg-light-3.svg" type="image/x-icon" />
 
+      <link href="./styles/fonts/fonts.css" rel="stylesheet" type="text/css" />
+
       <link rel="stylesheet" href="./styles/reset.css" />
-      <link rel="stylesheet" href="./styles/AvenirNextCyr.css" />
       <link rel="stylesheet" href="./styles/styles.css" />
       <link rel="stylesheet" type="text/css" href="./styles/style.css" />
    </head>
