feat: added dist

--- a/esoteric/vite-sass/src/pages/header/header.html
+++ b/esoteric/vite-sass/src/pages/header/header.html
@@ -4,8 +4,10 @@
       CaRT PAGE
    </a>
 
-   <h1 class="main-title title">
-      <span>Sass</span> <br />simple starter
+   <div class="main-title title">
+      <div class="counter">0</div>
+      <button class="sass-btn">Sass</button>
+      <br />simple starter
       <a
          class="main-title-link"
          href="https://github.com/goitacademy/vite-sass-app-template"
@@ -14,7 +16,7 @@
       >
          template
       </a>
-   </h1>
+   </div>
 
    <ul class="main-badges badges">
       <li class="badges-item">
