feat: added stylesheet color palletes

--- a/esoteric/vite-sass/src/index.html
+++ b/esoteric/vite-sass/src/index.html
@@ -8,12 +8,9 @@
    </head>
    <body>
       <div class="wrapper">
-         <main class="main">
-            <load src="./pages/header/header.html" />
-         </main>
-         <footer class="footer">
-            <load src="./pages/footer/footer.html" />
-         </footer>
+         <header></header>
+         <main></main>
+         <footer></footer>
       </div>
 
       <script type="module" src="./js/main.js"></script>
