feat: fixed theme variables

--- a/esoteric/vite-sass/src/index.html
+++ b/esoteric/vite-sass/src/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
    <head>
       <meta charset="UTF-8" />
       <link rel="icon" type="image/svg+xml" href="../public/sass.svg" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>SASS Tutorial template</title>
    </head>
-   <body>
+   <body id="top">
       <div class="wrapper">
          <header></header>
          <main></main>
          <footer></footer>
+         <button class="toggle_theme-btn"></button>
+         <button><a class="top-btn" href="#top"> TOP Button </a></button>
       </div>
 
       <script type="module" src="./js/main.js"></script>
