feat: added header html structure

--- a/esoteric/vite-sass/src/index.html
+++ b/esoteric/vite-sass/src/index.html
@@ -8,7 +8,7 @@
    </head>
    <body id="top">
       <div class="wrapper">
-         <header></header>
+         <load src="./pages/homepage/header/header.html" />
          <main></main>
          <footer></footer>
          <button class="toggle_theme-btn"></button>
