--- a/esoteric/vite-sass/src/pages/homepage/header/header.html
+++ b/esoteric/vite-sass/src/pages/homepage/header/header.html
@@ -1,51 +1,21 @@
-<div class="container">
-   <a class="main-logo" href="./pages/cart/cart.html" rel="noopener noreferrer">
-      <img class="main-logo-img" src="/img/logo-sass.png" alt="Sass logo" width="360" height="360" />
-      CaRT PAGE
-   </a>
-
-   <div class="main-title title">
-      <div class="counter">0</div>
-      <button class="sass-btn">Sass</button>
-      <br />simple starter
-      <a
-         class="main-title-link"
-         href="https://github.com/goitacademy/vite-sass-app-template"
-         target="_blank"
-         rel="noopener noreferrer"
-      >
-         template
-      </a>
+<div class="container header">
+   <div class="header__info info">
+      <p class="info__start-date">старт: 23.10</p>
+      <p class="info__description">Тільки концентрат інформації</p>
    </div>
-
-   <ul class="main-badges badges">
-      <li class="badges-item">
-         <a class="badges-link" href="https://vitejs.dev/" target="_blank">Vite</a>
-      </li>
-      <li class="badges-item">
-         <a class="badges-link" href="./pages/checkout/checkout-1.html" rel="noopener noreferrer">
-            CHECKOUT PAGE ...
-         </a>
-      </li>
-      <li class="badges-item">
-         <a
-            class="badges-link"
-            href="https://www.npmjs.com/package/autoprefixer"
-            target="_blank"
-            rel="noopener noreferrer"
-         >
-            Autoprefixer
-         </a>
-      </li>
-      <li class="badges-item">
-         <a
-            class="badges-link"
-            href="https://www.npmjs.com/package/postcss-sort-media-queries"
-            target="_blank"
-            rel="noopener noreferrer"
-         >
-            postcss-sort-media-queries
-         </a>
-      </li>
-   </ul>
+   <div class="header__content content">
+      <div class="content__main main">
+         <p class="main__title title">старт: 23.10</p>
+         <p class="main__additional additional">Тільки концентрат інформації</p>
+         <p class="main__description description">Тільки концентрат інформації</p>
+      </div>
+      <button class="content__button button_primary">
+         399 грн замість <span class="content__button-strike">1500</span> грн
+      </button>
+      <div class="content__cta cta">
+         <p class="cta__text">До закінчення акії залишилось</p>
+         <p class="cta__timer timer">00:00:00</p>
+      </div>
+   </div>
+   <div class="header__shadow"></div>
 </div>
