feat: added sections about, features, header, benefits

--- a/esoteric/vite-sass/src/pages/homepage/benefits/benefits.html
+++ b/esoteric/vite-sass/src/pages/homepage/benefits/benefits.html
@@ -1,15 +1,12 @@
-<section id="about" class="section about">
+<section id="benefits" class="section benefits">
    <div class="section__title">
       <p class="section__title_title"></p>
       <p class="section__title_description"></p>
    </div>
 
    <div class="section__content">
-      <article class="about__article"></article>
-      <article class="about__article"></article>
-
-      <ul class="about__list">
-         <li class="about__item item">
+      <ul class="benefits__list">
+         <li class="benefits__item item">
             <div class="item-button">Close</div>
             <p class="item-text">
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
@@ -17,7 +14,15 @@
                voluptates ullam! Sint.
             </p>
          </li>
-         <li class="about__item item">
+         <li class="benefits__item item">
+            <div class="item-button">Close</div>
+            <p class="item-text">
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
+               maxime hic, at repudiandae quos architecto voluptas quisquam itaque perspiciatis eligendi expedita
+               voluptates ullam! Sint.
+            </p>
+         </li>
+         <li class="benefits__item item">
             <div class="item-button">Close</div>
             <p class="item-text">
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
