--- a/esoteric/vite-sass/src/pages/homepage/header/header.html
+++ b/esoteric/vite-sass/src/pages/homepage/header/header.html
@@ -1,21 +1,21 @@
 <div class="container header">
    <div class="header__info info">
-      <p class="info__start-date">старт: 23.10</p>
-      <p class="info__description">Тільки концентрат інформації</p>
+      <p class="header__start-date">старт: 23.10</p>
+      <p class="header__description">Тільки концентрат інформації</p>
    </div>
-   <div class="header__content content">
-      <div class="content__main main">
-         <p class="main__title title">старт: 23.10</p>
-         <p class="main__additional additional">Тільки концентрат інформації</p>
-         <p class="main__description description">Тільки концентрат інформації</p>
+   <div class="header__content">
+      <div class="header__main">
+         <p class="header__title">старт: 23.10</p>
+         <p class="header__subtitle">Тільки концентрат інформації</p>
+         <p class="header__description">Тільки концентрат інформації</p>
       </div>
-      <button class="content__button button_primary">
-         399 грн замість <span class="content__button-strike">1500</span> грн
+      <button class="header__button button_primary">
+         399 грн замість <span class="header__button-strike">1500</span> грн
       </button>
-      <div class="content__cta cta">
-         <p class="cta__text">До закінчення акії залишилось</p>
-         <p class="cta__timer timer">00:00:00</p>
+      <div class="header__cta">
+         <p class="header__text">До закінчення акії залишилось</p>
+         <p class="header__timer timer">00:00:00</p>
       </div>
    </div>
-   <div class="header__shadow"></div>
+   <div class="header__bg-shadow"></div>
 </div>
