feat: added sections about, description, testimonials

--- a/esoteric/vite-sass/src/index.html
+++ b/esoteric/vite-sass/src/index.html
@@ -9,8 +9,21 @@
    <body id="top">
       <div class="wrapper">
          <load src="./pages/homepage/header/header.html" />
-         <main></main>
-         <footer></footer>
+         <main>
+            <load src="./pages/homepage/benefits/benefits.html" />
+            <load src="./pages/homepage/features/features.html" />
+            <load src="./pages/homepage/about/about.html" />
+            <load src="./pages/homepage/description/description.html" />
+            <load src="./pages/homepage/testimonials/testimonials.html" />
+
+            <load src="./pages/homepage/" /> // exit results section
+            <load src="./pages/homepage/" /> // roadmap section
+            <load src="./pages/homepage/" /> // guarantees
+            <load src="./pages/homepage/" /> // questions
+         </main>
+         <footer>
+            <load src="./pages/homepage/footer/footer.html" />
+         </footer>
          <button class="toggle_theme-btn"></button>
          <button><a class="top-btn" href="#top"> TOP Button </a></button>
       </div>
