feat: modified header

--- a/esoteric/vite-sass/src/pages/homepage/header/header.html
+++ b/esoteric/vite-sass/src/pages/homepage/header/header.html
@@ -1,20 +1,22 @@
-<div class="container header">
+<div class="section header">
    <div class="header__info info">
       <p class="header__start-date">старт: 23.10</p>
-      <p class="header__description">Тільки концентрат інформації</p>
+      <p class="header__text">Тільки концентрат інформації</p>
    </div>
    <div class="header__content">
       <div class="header__main">
-         <p class="header__title">старт: 23.10</p>
-         <p class="header__subtitle">Тільки концентрат інформації</p>
-         <p class="header__description">Тільки концентрат інформації</p>
+         <h1 class="header__title title">
+            Навчись робити сторіс, які продають та викликають сотні реакцій всього за 6 кроків або я поверну тобі гроші
+         </h1>
+         <h2 class="header__subtitle">7-денний інтенсив по сторіс для експертних та особистих блогів</h2>
+         <p class="header__description">Пiдходить для спецiалiстiв та експертiв з будь-якоi нiшi!</p>
       </div>
-      <button class="header__button button_primary">
-         399 грн замість <span class="header__button-strike">1500</span> грн
-      </button>
       <div class="header__cta">
-         <p class="header__text">До закінчення акії залишилось</p>
-         <p class="header__timer timer">00:00:00</p>
+         <button class="header__button button_primary">
+            399 грн замість <span class="header__button-strike">1500</span> грн
+         </button>
+         <p class="header__time-left">До закінчення акії залишилось</p>
+         <p class="header__timer">00:00:00</p>
       </div>
    </div>
    <div class="header__bg-shadow"></div>
