feat: added header styles

--- a/esoteric/vite-sass/src/pages/homepage/header/header.html
+++ b/esoteric/vite-sass/src/pages/homepage/header/header.html
@@ -9,7 +9,7 @@
             Навчись робити сторіс, які продають та викликають сотні реакцій всього за 6 кроків або я поверну тобі гроші
          </h1>
          <h2 class="header__subtitle">7-денний інтенсив по сторіс для експертних та особистих блогів</h2>
-         <p class="header__description">Пiдходить для спецiалiстiв та експертiв з будь-якоi нiшi!</p>
+         <p class="header__description inclined">Пiдходить для спецiалiстiв та експертiв з будь-якоi нiшi!</p>
       </div>
       <div class="header__cta">
          <button class="header__button button_primary">
