feat: modify section / benefits styles

--- a/esoteric/vite-sass/src/pages/homepage/features/features.html
+++ b/esoteric/vite-sass/src/pages/homepage/features/features.html
@@ -1,7 +1,9 @@
 <section id="features" class="section features">
    <div class="section__title">
-      <p class="section__title_title"></p>
-      <p class="section__title_description"></p>
+      <p class="section__title_title">
+         чому тобі потрібно <br />навчитись робити <br /><span class="section__title_title-colored">класні сторіс</span>
+      </p>
+      <!-- <p class="section__title_description"></p> -->
    </div>
 
    <div class="section__content">
