feat: modified benefits section

--- a/esoteric/vite-sass/src/pages/homepage/benefits/benefits.html
+++ b/esoteric/vite-sass/src/pages/homepage/benefits/benefits.html
@@ -3,30 +3,37 @@
       <p class="section__title_title">
          чому тобі потрібно <br />навчитись робити <br /><span class="section__title_title-colored">класні сторіс</span>
       </p>
-      <!-- <p class="section__title_description"></p> -->
    </div>
 
    <div class="section__content">
       <ul class="benefits__list">
          <li class="benefits__item item">
-            <div class="item-button">Close</div>
-            <p class="item-text">
+            <div class="benefits__item-button">Close</div>
+            <p class="benefits__item-text">
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
                maxime hic, at repudiandae quos architecto voluptas quisquam itaque perspiciatis eligendi expedita
                voluptates ullam! Sint.
             </p>
          </li>
          <li class="benefits__item item">
-            <div class="item-button">Close</div>
-            <p class="item-text">
+            <div class="benefits__item-button">Close</div>
+            <p class="benefits__item-text">
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
                maxime hic, at repudiandae quos architecto voluptas quisquam itaque perspiciatis eligendi expedita
                voluptates ullam! Sint.
             </p>
          </li>
          <li class="benefits__item item">
-            <div class="item-button">Close</div>
-            <p class="item-text">
+            <div class="benefits__item-button">Close</div>
+            <p class="benefits__item-text">
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
+               maxime hic, at repudiandae quos architecto voluptas quisquam itaque perspiciatis eligendi expedita
+               voluptates ullam! Sint.
+            </p>
+         </li>
+         <li class="benefits__item item">
+            <div class="benefits__item-button">Close</div>
+            <p class="benefits__item-text">
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
                maxime hic, at repudiandae quos architecto voluptas quisquam itaque perspiciatis eligendi expedita
                voluptates ullam! Sint.
