feat: modified features sections

--- a/esoteric/vite-sass/src/pages/homepage/features/features.html
+++ b/esoteric/vite-sass/src/pages/homepage/features/features.html
@@ -1,35 +1,38 @@
 <section id="features" class="section features">
    <div class="section__title">
       <p class="section__title_title">
-         чому тобі потрібно <br />навчитись робити <br /><span class="section__title_title-colored">класні сторіс</span>
+         інтенсив буде корисним <br />
+         для тебе, <span class="section__title_title-colored">якщо ти:</span>
       </p>
-      <!-- <p class="section__title_description"></p> -->
    </div>
 
    <div class="section__content">
       <ul class="features__list">
-         <li class="features__item item">
-            <div class="item-button">Close</div>
-            <p class="item-text">
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
-               maxime hic, at repudiandae quos architecto voluptas quisquam itaque perspiciatis eligendi expedita
+         <li class="features__item">
+            <div class="features__item-image">
+               <img src="../../../images/image.gif" alt="minions apploused" />
+            </div>
+            <p class="features__item-text">
+               <span>repudiandae quos architecto voluptas</span> quisquam itaque perspiciatis eligendi expedita
                voluptates ullam! Sint.
             </p>
          </li>
-         <li class="features__item item">
-            <div class="item-button">Close</div>
-            <p class="item-text">
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
-               maxime hic, at repudiandae quos architecto voluptas quisquam itaque perspiciatis eligendi expedita
-               voluptates ullam! Sint.
+         <li class="features__item">
+            <div class="features__item-image">
+               <img src="../../../images/dog-typing.gif" alt="dog typing" />
+            </div>
+            <p class="features__item-text">
+               <span>e quos architecto voluptas </span>quisquam itaque perspiciatis eligendi expedita voluptates ullam!
+               Sint.
             </p>
          </li>
-         <li class="features__item item">
-            <div class="item-button">Close</div>
-            <p class="item-text">
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
-               maxime hic, at repudiandae quos architecto voluptas quisquam itaque perspiciatis eligendi expedita
-               voluptates ullam! Sint.
+         <li class="features__item">
+            <div class="features__item-image">
+               <img src="../../../images/homer-1.gif" alt="homer hiding in bushes" />
+            </div>
+            <p class="features__item-text">
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit
+               <span>aperiam ipsa omnis</span> molestiae maxime hic
             </p>
          </li>
       </ul>
