feat: modified release structure

--- a/esoteric/index.html
+++ b/esoteric/index.html
@@ -191,7 +191,7 @@
          <footer>
             <div class="container">
    Made with ❤ by
-   <a href="https://goit.global/ua/" target="_blank" rel="noopener noreferrer"> GoIT </a>
+   <a href="#" target="_blank" rel="noopener noreferrer"> KV28 </a>
 </div>
 
          </footer>
