--- a/esoteric/index.html
+++ b/esoteric/index.html
@@ -96,7 +96,7 @@
       <ul class="features__list">
          <li class="features__item">
             <div class="features__item-image">
-               <img src="../../../images/image.gif" alt="minions apploused" />
+               <img src="assets/image.gif" alt="minions apploused" />
             </div>
             <p class="features__item-text">
                <span>repudiandae quos architecto voluptas</span> quisquam itaque perspiciatis eligendi expedita
@@ -105,7 +105,7 @@
          </li>
          <li class="features__item">
             <div class="features__item-image">
-               <img src="../../../images/dog-typing.gif" alt="dog typing" />
+               <img src="assets/dog-typing.gif" alt="dog typing" />
             </div>
             <p class="features__item-text">
                <span>e quos architecto voluptas </span>quisquam itaque perspiciatis eligendi expedita voluptates ullam!
@@ -114,7 +114,7 @@
          </li>
          <li class="features__item">
             <div class="features__item-image">
-               <img src="../../../images/homer-1.gif" alt="homer hiding in bushes" />
+               <img src="assets/images/homer-1.gif" alt="homer hiding in bushes" />
             </div>
             <p class="features__item-text">
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit
