feat: modify root preview

--- a/esoteric/index.html
+++ b/esoteric/index.html
@@ -114,7 +114,7 @@
          </li>
          <li class="features__item">
             <div class="features__item-image">
-               <img src="assets/images/homer-1.gif" alt="homer hiding in bushes" />
+               <img src="assets/homer-1.gif" alt="homer hiding in bushes" />
             </div>
             <p class="features__item-text">
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit
