--- a/esoteric/vite-sass/src/pages/homepage/about/about.html
+++ b/esoteric/vite-sass/src/pages/homepage/about/about.html
@@ -1,31 +1,96 @@
 <section id="about" class="section about">
    <div class="section__title">
-      <p class="section__title_title"></p>
+      <p class="section__title_title">Василь Байдак</p>
       <p class="section__title_description"></p>
    </div>
 
    <div class="section__content">
-      <article class="about__article"></article>
-      <article class="about__article"></article>
+      <article class="about__article">
+         <div class="about__article-content">
+            <p class="about__article__text">
+               Всього лише за
+               <strong class="colored"> 8 місяців </strong>
+               я:
+            </p>
+            <ul>
+               <li>
+                  <img class="ico" src="../../../images/icons/symbol-svgrepo.svg" alt="windmil ico" />
+                  <p class="about__article__text">
+                     voluptas quisquam <strong class="colored"> e quos architecto voluptas </strong> , itaque
+                     perspiciatis eligendi expedita
+                  </p>
+               </li>
+               <li>
+                  <img class="ico" src="../../../images/icons/symbol-svgrepo.svg" alt="windmil ico" />
+                  <p class="about__article__text">
+                     maxime hic, at<strong class="colored"> e quos architecto voluptas </strong> repudianda quisquam
+                     itaque perspiciatis eligendi expedita
+                  </p>
+               </li>
+               <li>
+                  <img class="ico" src="../../../images/icons/symbol-svgrepo.svg" alt="windmil ico" />
+                  <p class="about__article__text">
+                     maxime hic, at repudiandae quos architecto voluptas quisquam itaque
+                     <strong class="colored">perspiciatis eligendi expedita</strong>
+                  </p>
+               </li>
+               <li>
+                  <img class="ico" src="../../../images/icons/symbol-svgrepo.svg" alt="windmil ico" />
+                  <p class="about__article__text">
+                     maxime hic, at repudiandae quos architecto voluptas quisquam
+                     <strong class="colored"> eligendi expedita </strong>itaque perspiciatis
+                  </p>
+               </li>
+               <li>
+                  <img class="ico" src="../../../images/icons/symbol-svgrepo.svg" alt="windmil ico" />
+                  <p class="about__article__text">
+                     <strong class="colored"> at repudiandae quos architecto </strong>maxime hic, voluptas quisquam
+                     itaque perspiciatis eligendi expedita
+                  </p>
+               </li>
+               <li>
+                  <img class="ico" src="../../../images/icons/symbol-svgrepo.svg" alt="windmil ico" />
+                  <p class="about__article__text">
+                     maxime hic, at repudiandae quos architecto voluptas quisquam<strong class="colored">
+                        8 місяців
+                     </strong>
+                     itaque perspiciatis eligendi expedita
+                  </p>
+               </li>
+            </ul>
+         </div>
+         <div class="about__article__picture">
+            <div class="about__article__picture-frame">
+               <img src="../../../images/background/magic-8986975_640.jpg" alt="" />
+            </div>
+         </div>
+      </article>
 
-      <ul class="about__list">
-         <li class="about__item item">
-            <div class="item-button">Close</div>
-            <p class="item-text">
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
-               maxime hic, at repudiandae quos architecto voluptas quisquam itaque perspiciatis eligendi expedita
-               voluptates ullam! Sint.
+      <article class="about__article">
+         <div class="about__article__picture">
+            <div class="about__article__picture-frame">
+               <img src="../../../images/background/tarot-8777282_640.webp" alt="" />
+            </div>
+         </div>
+         <div class="about__article-content">
+            <p class="about__article__text">
+               sit debitis aperiam ipsa omnis molestiae maxime hic, at repudiandae
+               <strong> quos architecto voluptas quisquam </strong> itaque perspiciatis eligendi expedita voluptates
+               ullam! Sint.
             </p>
-         </li>
-         <li class="about__item item">
-            <div class="item-button">Close</div>
-            <p class="item-text">
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit debitis aperiam ipsa omnis molestiae
-               maxime hic, at repudiandae quos architecto voluptas quisquam itaque perspiciatis eligendi expedita
-               voluptates ullam! Sint.
+            <p class="about__article__text">
+               sit debitis aperiam ipsa omnis molestiae maxime hic, at repudiandae quos architecto voluptas quisquam
+               itaque perspiciatis eligendi expedita voluptates ullam! Sint.
             </p>
-         </li>
-      </ul>
+            <p class="about__article__text">
+               <strong> sit debitis aperiam ipsa</strong> omnis molestiae maxime hic, at repudiandae quos architecto
+               voluptas quisquam itaque perspiciatis eligendi expedita voluptates ullam! Sint.
+            </p>
+            <p class="about__article__text">
+               <strong> itaque - perspiciatis eligendi expedita </strong>
+            </p>
+         </div>
+      </article>
    </div>
 
    <div class="section__conclusion"></div>
