feat: modified descriptions section & result section styles

--- a/esoteric/vite-sass/src/index.html
+++ b/esoteric/vite-sass/src/index.html
@@ -13,9 +13,10 @@
             <load src="./pages/homepage/benefits/benefits.html" />
             <load src="./pages/homepage/features/features.html" />
             <load src="./pages/homepage/about/about.html" />
-
             <load src="./pages/homepage/description/description.html" />
+            
             <load src="./pages/homepage/testimonials/testimonials.html" />
+            <load src="./pages/homepage/results/results.html" />
 
          </main>
          <footer>
