--- a/esoteric/vite-sass/src/pages/homepage/description/description.html
+++ b/esoteric/vite-sass/src/pages/homepage/description/description.html
@@ -1,36 +1,44 @@
 <section id="description" class="section description">
    <div class="section__title">
-      <p class="section__title_title">
-         Результати, які ти <br />
-         отримаєш після <br /><span class="section__title_title-colored">інтенсиву:</span>
-      </p>
+      <p class="section__title_title">Програма <br /><span class="section__title_title-cursive">інтенсиву:</span></p>
    </div>
 
    <div class="section__content description__content">
       <ul>
          <li>
-            <p class="description__content-marker">(01)</p>
-            <p class="description__content-text">
-               Кайфуєш від власних сторіс, витрачаючи всього 3 години на тиждень, а не робиш їх з надривом
-            </p>
+            <p class="description__content-marker">01</p>
+            <p class="description__content-text">Кайфуєш від сторіс 3 години з надривом</p>
+            <div>
+               <img src="../../../assets/images/pictures/top-3.webp" alt="video lesson" />
+            </div>
          </li>
          <li>
-            <p class="description__content-marker">(02)</p>
+            <p class="description__content-marker">02</p>
             <p class="description__content-text">Кайфуєш від власних сторіс, витрачаючи всього 3 години</p>
+            <div>
+               <img src="../../../assets/images/pictures/hq720.jpg" alt="video lesson" />
+            </div>
          </li>
          <li>
-            <p class="description__content-marker">(03)</p>
-            <p class="description__content-text">Кайфуєш від власних сторіс, витрачаючи 3 години</p>
+            <p class="description__content-marker">03</p>
+            <p class="description__content-text">витрачаючи 3 години</p>
+            <div>
+               <img src="../../../assets/images/pictures/top-3.webp" alt="video lesson" />
+            </div>
          </li>
          <li>
-            <p class="description__content-marker">(04)</p>
+            <p class="description__content-marker">04</p>
             <p class="description__content-text">Кайфуєш від власних сторіс, виттиждень, а не робиш їх з надривом</p>
+            <div>
+               <img src="../../../assets/images/pictures/Video-bubble-blog-hero.gif" alt="video lesson" />
+            </div>
          </li>
          <li>
-            <p class="description__content-marker">(05)</p>
-            <p class="description__content-text">
-               Кайфуєш від власних сторіс, витрачаючи всього 3 години на тиждень, а не робиш їх з надривом
-            </p>
+            <p class="description__content-marker">05</p>
+            <p class="description__content-text">Кайфуєш від тиждень, а не робиш їх з надривом</p>
+            <div>
+               <img src="../../../assets/images/pictures/top-3.webp" alt="video lesson" />
+            </div>
          </li>
       </ul>
    </div>
