--- a/esoteric/vite-sass/src/pages/homepage/footer/footer.html
+++ b/esoteric/vite-sass/src/pages/homepage/footer/footer.html
@@ -1,4 +1,4 @@
-<div class="container">
-   Made with ❤ by
+<div class="container footer">
+   Made with ❤️ by
    <a href="https://github.com/hustle2live" target="_blank" rel="noopener noreferrer"> @VK28 </a>
 </div>
