feat: modified testimonials section

--- a/esoteric/vite-sass/src/pages/homepage/testimonials/testimonials.html
+++ b/esoteric/vite-sass/src/pages/homepage/testimonials/testimonials.html
@@ -1,10 +1,58 @@
 <section id="testimonials" class="section testimonials">
    <div class="section__title">
-      <p class="section__title_title"></p>
-      <p class="section__title_description"></p>
+      <p class="section__title_title">
+         відгуки задоволених <br /><span class="section__title_title-colored">учнів:</span>
+      </p>
    </div>
 
-   <div class="section__content testimonials__content"></div>
+   <div class="section__content testimonials__content">
+      <ul>
+         <li>
+            <p class="testimonials__content-text">Ірина Ірина</p>
+            <p class="testimonials__content-text">
+               Lorem ipsum dolor <span> sit amet👍 consectetur facere repellat deleniti</span> adipisicing elit. Beatae eveniet architecto dolorum quod
+               distinctio. Nesciunt et veniam 🙂 incidunt, dolor, quia ipsum fugiat debitis ❤️❤️ullam nostrum, porro
+               numquam
+               <span> facere repellat deleniti</span>.
+            </p>
+         </li>
+         <li>
+            <p class="testimonials__content-text">Ірина Ірина</p>
+            <p class="testimonials__content-text">
+               <span>Lorem ipsum dolor sit amet consectetur</span> adipisicing elit 🙂. Beatae eveniet architecto
+               dolorum quod distinctio. Nesciunt et veniam incidunt, ✍️〽️dolor, quia ipsum fugiat debitis ullam nostrum,
+               porro numquam facere repellat deleniti.
+            </p>
+         </li>
+         <li>
+            <p class="testimonials__content-text">Ірина Ірина</p>
+            <p class="testimonials__content-text">
+               Lorem ipsum dolor sit amet✍️〽️ consectetur adipisicing elit.
+               <span
+                  >Beatae eveniet architecto dolorum quod distinctio. Nesciunt et 😍 veniam incidunt, dolor, quia ipsum
+                  fugiat</span
+               >
+               debitis ullam nostrum,❤️❤️❤️ porro numquam facere repellat deleniti.
+            </p>
+         </li>
+         <li>
+            <p class="testimonials__content-text">Ірина Ірина</p>
+            <p class="testimonials__content-text">
+               Lorem ipsum dolor sit amet consectetur a👍dipisicing elit. Beatae eveniet architecto dolorum quod
+               distinctio. Nesciunt et veniam incidunt, 〽️🙂dolor,
+               <span> quia ipsum fugiat debitis ullam nostrum,</span> porro numquam facere repellat deleniti🙏.
+            </p>
+         </li>
+         <li>
+            <p class="testimonials__content-text">Ірина Ірина</p>
+            <p class="testimonials__content-text">
+               <span>Lorem ipsum dolor sit amet</span> consectetur adipisicing elit. Beatae eveniet architecto dolorum
+               quod distinctio❤️. Nesciunt et <span>veniam incidunt, dolor, quia ipsum fugiat debitis</span> ullam
+               nostrum, porro numquam facere repellat deleniti.
+            </p>
+         </li>
+      </ul>
+   </div>
 
    <div class="section__conclusion"></div>
    <div class="section__background"></div>
