feat: modified description section

--- a/esoteric/vite-sass/src/pages/homepage/description/description.html
+++ b/esoteric/vite-sass/src/pages/homepage/description/description.html
@@ -43,6 +43,20 @@
       </ul>
    </div>
 
-   <div class="section__conclusion"></div>
-   <div class="section__background"></div>
+   <div class="description__conclusion">
+      <ul class="description__conclusion-list">
+         <li class="description__conclusion-item">
+            <p class="description__content-text">Кайфуєш від тиждень, а не робиш їх з надривом <strong> по інфопродуктам та доступ до чату</strong> по інтенсиву</p>
+         </li>
+         <li class="description__conclusion-item">
+            <p class="description__content-text">
+               У подарунок ти отримаєш <strong>бонусний урок </strong> по інфопродуктам та доступ до чату, де зможеш
+               поставити будь-яке запитання по інтенсиву
+            </p>
+         </li>
+      </ul>
+      <div class="description__conclusion-gift">
+         <img src="../../../assets/images/pictures/blue-gift-3.png" alt="" />
+      </div>
+   </div>
 </section>
