feat: feat results section

--- a/esoteric/vite-sass/src/pages/homepage/results/results.html
+++ b/esoteric/vite-sass/src/pages/homepage/results/results.html
@@ -35,6 +35,23 @@
       </ul>
    </div>
 
-   <div class="section__conclusion"></div>
-   <div class="section__background"></div>
+   <div class="section__title roadmap">
+      <p class="section__title_title">Як буде проходити <br /></p>
+      <p class="section__title_title-colored">навчання:</p>
+
+      <ul class="roadmap__list">
+         <li class="roadmap__item">
+            <p>Кайфуєш від власних сторіс, витрачаючи всього 3 години на тиждень, а не робиш їх з надривом</p>
+         </li>
+
+         <li class="roadmap__item">
+            <p>Кайфуєш від власних сторіс, витрачаючи всього 3 години </p>
+         </li>
+         <li class="roadmap__item">
+            <p>Кайфуєш від власних сторіс, витрачаючи 3 години</p>
+         </li>
+         <li class="roadmap__item">
+         </li>
+      </ul>
+   </div>
 </section>
