feat: modify warranty section

--- a/esoteric/vite-sass/src/index.html
+++ b/esoteric/vite-sass/src/index.html
@@ -16,6 +16,8 @@
             <load src="./pages/homepage/description/description.html" />
             <load src="./pages/homepage/testimonials/testimonials.html" />
             <load src="./pages/homepage/results/results.html" />
+            <load src="./pages/homepage/warranty/warranty.html" />
+            <load src="./pages/homepage/questions/questions.html" />
          </main>
          <footer>
             <load src="./pages/homepage/footer/footer.html" />
