feat: modify footer element

--- a/esoteric/vite-sass/src/pages/homepage/results/results.html
+++ b/esoteric/vite-sass/src/pages/homepage/results/results.html
@@ -36,8 +36,10 @@
    </div>
 
    <div class="section__title roadmap">
-      <p class="section__title_title">Як буде проходити <br /></p>
-      <p class="section__title_title-colored">навчання:</p>
+      <p class="section__title_title full-width">
+         Як буде проходити <br />
+         <span class="section__title_title-colored full-width">навчання:</span>
+      </p>
 
       <ul class="roadmap__list">
          <li class="roadmap__item">
@@ -45,13 +47,12 @@
          </li>
 
          <li class="roadmap__item">
-            <p>Кайфуєш від власних сторіс, витрачаючи всього 3 години </p>
+            <p>Кайфуєш від власних сторіс, витрачаючи всього 3 години</p>
          </li>
          <li class="roadmap__item">
             <p>Кайфуєш від власних сторіс, витрачаючи 3 години</p>
          </li>
-         <li class="roadmap__item">
-         </li>
+         <li class="roadmap__item"></li>
       </ul>
    </div>
 </section>
