--- a/esoteric/vite-sass/src/pages/homepage/questions/questions.html
+++ b/esoteric/vite-sass/src/pages/homepage/questions/questions.html
@@ -1,43 +1,100 @@
 <section id="questions" class="section questions">
    <div class="section__title">
-      <p class="section__title_title">
-         інтенсив буде корисним <br />
-         для тебе, <span class="section__title_title-colored">якщо ти:</span>
+      <p class="section__title_title full-width">
+         Запитання та <br />
+         <span class="section__title_title-colored full-width">відповіді:</span>
       </p>
    </div>
 
    <div class="section__content">
       <ul class="questions__list">
-         <li class="questions__item">
-            <div class="questions__item-image">
-               <img src="../../../assets/images/pictures/image.gif" alt="minions apploused" />
+         <li class="questions__item questions__dropdown">
+            <div class="questions__dropdown-toggle">
+               <div class="questions__expand">
+                  <svg
+                     width="80px"
+                     height="80px"
+                     viewBox="0 0 24 24"
+                     xmlns="http://www.w3.org/2000/svg"
+                     fill="none"
+                     stroke="#000000"
+                     stroke-width="1"
+                     stroke-linecap="round"
+                     stroke-linejoin="miter"
+                  >
+                     <circle cx="12" cy="12" r="10"></circle>
+                     <polyline points="10 16 15 12 10 8"></polyline>
+                  </svg>
+               </div>
+               <p class="questions__title">repudiandae quos architecto voluptas</p>
             </div>
-            <p class="questions__item-text">
-               <span>repudiandae quos architecto voluptas</span> quisquam itaque perspiciatis eligendi expedita
-               voluptates ullam! Sint.
-            </p>
+            <div class="questions__dropdown-element">
+               <p class="questions__text">
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+               </p>
+            </div>
          </li>
-         <li class="questions__item">
-            <div class="questions__item-image">
-               <img src="../../../assets/images/pictures/dog-typing.gif" alt="dog typing" />
+         <li class="questions__item questions__dropdown active">
+            <div class="questions__dropdown-toggle">
+               <div class="questions__expand">
+                  <svg
+                     width="80px"
+                     height="80px"
+                     viewBox="0 0 24 24"
+                     xmlns="http://www.w3.org/2000/svg"
+                     fill="none"
+                     stroke="#000000"
+                     stroke-width="1"
+                     stroke-linecap="round"
+                     stroke-linejoin="miter"
+                  >
+                     <circle cx="12" cy="12" r="10"></circle>
+                     <polyline points="10 16 15 12 10 8"></polyline>
+                  </svg>
+               </div>
+               <p class="questions__title">repudiandae quos architecto voluptas</p>
             </div>
-            <p class="questions__item-text">
-               <span>e quos architecto voluptas </span>quisquam itaque perspiciatis eligendi expedita voluptates ullam!
-               Sint.
-            </p>
+            <div class="questions__dropdown-element">
+               <p class="questions__text">
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+               </p>
+            </div>
          </li>
-         <li class="questions__item">
-            <div class="questions__item-image">
-               <img src="../../../assets/images/minified/homer-1.gif" alt="homer hiding in bushes" />
+         <li class="questions__item questions__dropdown">
+            <div class="questions__dropdown-toggle">
+               <div class="questions__expand">
+                  <svg
+                     width="80px"
+                     height="80px"
+                     viewBox="0 0 24 24"
+                     xmlns="http://www.w3.org/2000/svg"
+                     fill="none"
+                     stroke="#000000"
+                     stroke-width="1"
+                     stroke-linecap="round"
+                     stroke-linejoin="miter"
+                  >
+                     <circle cx="12" cy="12" r="10"></circle>
+                     <polyline points="10 16 15 12 10 8"></polyline>
+                  </svg>
+               </div>
+               <p class="questions__title">repudiandae quos architecto voluptas</p>
             </div>
-            <p class="questions__item-text">
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit
-               <span>aperiam ipsa omnis</span> molestiae maxime hic
-            </p>
+            <div class="questions__dropdown-element">
+               <p class="questions__text">
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+                  <strong>repudiandae quos architecto voluptas</strong> quisquam itaque perspiciatis eligendi
+               </p>
+            </div>
          </li>
       </ul>
    </div>
-
-   <div class="section__conclusion"></div>
-   <div class="section__background"></div>
 </section>
