--- a/esoteric/vite-sass/src/pages/homepage/warranty/warranty.html
+++ b/esoteric/vite-sass/src/pages/homepage/warranty/warranty.html
@@ -1,18 +1,14 @@
 <div id="warranty" class="section warranty">
-   <div class="warranty__info info">
+   <div class="warranty__info">
       <div class="warranty__label">
          <span> Гарантія </span>
       </div>
-      <p class="warranty__start-date">
-         Я впевнена, що пройшовши інтенсив, ти <strong> почнеш робити класні сторіс.</strong>
-      </p>
-      <p class="warranty__text">Це навички, які не потребують особливої кваліфікації і які доступні всім.</p>
+      <p>Я впевнена, що пройшовши інтенсив, ти <strong> почнеш робити класні сторіс.</strong></p>
+      <p>Це навички, які не потребують особливої кваліфікації і які доступні всім.</p>
    </div>
    <div class="warranty__content">
-      <p class="warranty__description">
-         Пiдходить для спецiалiстiв та експертiв з <strong> почнеш робити класні сторіс.</strong>
-      </p>
-      <p class="warranty__cta">До закінчення акії залишилось :)</p>
+      <p>Пiдходить для спецiалiстiв та експертiв з <strong> почнеш робити класні сторіс.</strong></p>
+      <p>Просто напиши нам про це :)</p>
    </div>
    <div class="warranty__bg-shadow"></div>
 </div>
