feat: modify particular styles

--- a/esoteric/vite-sass/src/pages/homepage/questions/questions.html
+++ b/esoteric/vite-sass/src/pages/homepage/questions/questions.html
@@ -34,7 +34,7 @@
                </p>
             </div>
          </li>
-         <li class="questions__item questions__dropdown active">
+         <li class="questions__item questions__dropdown">
             <div class="questions__dropdown-toggle">
                <div class="questions__expand">
                   <svg
